--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,29 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-23 Fri 09:34]
+#+CAPTION: Clock summary at [2016-12-23 Fri 10:41]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *47:56* |       |       | 100.0 |
+| *Total time*                                                                | *49:00* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 47:56   |       |       | 100.0 |
-| Active                                                                      |         | 47:56 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.2 |
+| Stories                                                                     | 49:00   |       |       | 100.0 |
+| Active                                                                      |         | 49:00 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.1 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.3 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.1 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.9 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.9 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  24.9 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.7 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  24.4 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.4 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   8.2 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  15.6 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   8.0 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  15.2 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.5 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.6 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.8 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.7 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
-| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.7 |
-| COMPLETED Add support for inheritance in C#                                 |         |       |  4:56 |  10.3 |
+| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.6 |
+| STARTED Add support for inheritance in C#                                   |         |       |  6:00 |  12.2 |
 | STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -524,6 +524,7 @@ any kernel and sub-kernel. We should rename it and move it to output
 options.
 
 *** STARTED Add support for inheritance in C#                         :story:
+    CLOCK: [2016-12-23 Fri 09:50]--[2016-12-23 Fri 10:40] =>  0:50
     CLOCK: [2016-12-23 Fri 09:48]--[2016-12-23 Fri 09:49] =>  0:01
     CLOCK: [2016-12-23 Fri 09:35]--[2016-12-23 Fri 09:48] =>  0:13
     CLOCK: [2016-12-23 Fri 09:01]--[2016-12-23 Fri 09:34] =>  0:33
@@ -541,6 +542,11 @@ options.
 
 We need to update the templates to cope with single-inheritance in
 C#.
+
+Problems:
+
+- child sequence generator is not calling parent's sequence generator
+- child equals is not calling parent's
 
 *** STARTED Add complete constructor for C# types                     :story:
     CLOCK: [2016-12-19 Mon 20:19]--[2016-12-19 Mon 20:22] =>  0:03
