--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,18 +12,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-23 Fri 10:45]
+#+CAPTION: Clock summary at [2016-12-23 Fri 10:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:04* |       |       | 100.0 |
+| *Total time*                                                                | *49:11* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:04   |       |       | 100.0 |
-| Active                                                                      |         | 49:04 |       | 100.0 |
+| Stories                                                                     | 49:11   |       |       | 100.0 |
+| Active                                                                      |         | 49:11 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.1 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.1 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.9 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.0 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.8 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.7 |
 | COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  24.3 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.4 |
@@ -34,7 +34,7 @@
 | COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.7 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
 | COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.6 |
-| STARTED Add support for inheritance in C#                                   |         |       |  6:04 |  12.4 |
+| STARTED Add support for inheritance in C#                                   |         |       |  6:11 |  12.6 |
 | STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -524,6 +524,7 @@ any kernel and sub-kernel. We should rename it and move it to output
 options.
 
 *** STARTED Add support for inheritance in C#                         :story:
+    CLOCK: [2016-12-23 Fri 10:46]--[2016-12-23 Fri 10:53] =>  0:07
     CLOCK: [2016-12-23 Fri 10:41]--[2016-12-23 Fri 10:45] =>  0:04
     CLOCK: [2016-12-23 Fri 09:50]--[2016-12-23 Fri 10:40] =>  0:50
     CLOCK: [2016-12-23 Fri 09:48]--[2016-12-23 Fri 09:49] =>  0:01
