--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-23 Fri 10:59]
+#+CAPTION: Clock summary at [2016-12-23 Fri 11:06]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:15* |       |       | 100.0 |
+| *Total time*                                                                | *49:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:15   |       |       | 100.0 |
-| Active                                                                      |         | 49:15 |       | 100.0 |
+| Stories                                                                     | 49:21   |       |       | 100.0 |
+| Active                                                                      |         | 49:21 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.0 |
 | COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.0 |
@@ -27,14 +27,14 @@
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.7 |
 | COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  24.2 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.4 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   8.0 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  15.2 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   7.9 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  15.1 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.5 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.6 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.7 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.6 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
 | COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.6 |
-| STARTED Add support for inheritance in C#                                   |         |       |  6:15 |  12.7 |
+| COMPLETED Add support for inheritance in C#                                 |         |       |  6:21 |  12.9 |
 | STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -523,7 +523,9 @@ addition, this is not really C++ specific at all; it would apply to
 any kernel and sub-kernel. We should rename it and move it to output
 options.
 
-*** STARTED Add support for inheritance in C#                         :story:
+*** COMPLETED Add support for inheritance in C#                       :story:
+    CLOSED: [2016-12-23 Fri 11:05]
+    CLOCK: [2016-12-23 Fri 10:59]--[2016-12-23 Fri 11:05] =>  0:06
     CLOCK: [2016-12-23 Fri 10:54]--[2016-12-23 Fri 10:58] =>  0:04
     CLOCK: [2016-12-23 Fri 10:46]--[2016-12-23 Fri 10:53] =>  0:07
     CLOCK: [2016-12-23 Fri 10:41]--[2016-12-23 Fri 10:45] =>  0:04
