--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,19 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-23 Fri 11:12]
+#+CAPTION: Clock summary at [2016-12-23 Fri 11:23]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:27* |       |       | 100.0 |
+| *Total time*                                                                | *49:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:27   |       |       | 100.0 |
-| Active                                                                      |         | 49:27 |       | 100.0 |
+| Stories                                                                     | 49:36   |       |       | 100.0 |
+| Active                                                                      |         | 49:36 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:09 |   2.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.0 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.0 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  11.9 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.8 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.7 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.6 |
 | COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  24.1 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.4 |
 | COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   7.9 |
@@ -35,7 +35,7 @@
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
 | COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.5 |
 | COMPLETED Add support for inheritance in C#                                 |         |       |  6:21 |  12.8 |
-| STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
+| STARTED Add complete constructor for C# types                               |         |       |  0:12 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -555,12 +555,21 @@ Problems:
 - child equals is not calling parent's
 
 *** STARTED Add complete constructor for C# types                     :story:
+    CLOCK: [2016-12-23 Fri 11:21]--[2016-12-23 Fri 11:23] =>  0:02
+    CLOCK: [2016-12-23 Fri 11:13]--[2016-12-23 Fri 11:20] =>  0:07
     CLOCK: [2016-12-19 Mon 20:19]--[2016-12-19 Mon 20:22] =>  0:03
 
 We need a constructor that takes in all properties.
 
 Actually we should take on this story after inheritance, because the
 implementation is affected by it.
+
+We also need a parameterless constructor for serialisation purposes.
+
+Links:
+
+- [[http://stackoverflow.com/questions/12561333/why-do-i-need-a-parameterless-constructor][Why do I need a parameterless constructor?]]
+- [[http://stackoverflow.com/questions/267724/why-xml-serializable-class-need-a-parameterless-constructor][Why XML-Serializable class need a parameterless constructor]]
 
 *** Add immutability support for C# types                             :story:
 
