--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,31 +12,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-23 Fri 13:04]
+#+CAPTION: Clock summary at [2016-12-23 Fri 14:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:31* |       |       | 100.0 |
+| *Total time*                                                                | *51:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:31   |       |       | 100.0 |
-| Active                                                                      |         | 50:31 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:09 |   2.3 |
+| Stories                                                                     | 51:42   |       |       | 100.0 |
+| Active                                                                      |         | 51:42 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:09 |   2.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.0 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  11.7 |
-| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.8 |
-| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.5 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  23.6 |
-| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.4 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   7.8 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  14.8 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  11.4 |
+| COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.7 |
+| COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.3 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  23.1 |
+| COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.3 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   7.6 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  14.4 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.4 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.6 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.6 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.5 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
-| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.4 |
-| COMPLETED Add support for inheritance in C#                                 |         |       |  6:21 |  12.6 |
-| STARTED Add complete constructor for C# types                               |         |       |  0:51 |   1.7 |
-| CANCELLED Inherited attributes should just be a list                        |         |       |  0:16 |   0.5 |
+| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.3 |
+| COMPLETED Add support for inheritance in C#                                 |         |       |  6:21 |  12.3 |
+| COMPLETED Consider changing inherited attributes to a list                  |         |       |  0:34 |   1.1 |
+| COMPLETED Add complete constructor for C# types                             |         |       |  1:44 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -555,25 +555,6 @@ Problems:
 - child sequence generator is not calling parent's sequence generator
 - child equals is not calling parent's
 
-*** STARTED Add complete constructor for C# types                     :story:
-    CLOCK: [2016-12-23 Fri 11:24]--[2016-12-23 Fri 12:03] =>  0:39
-    CLOCK: [2016-12-23 Fri 11:21]--[2016-12-23 Fri 11:23] =>  0:02
-    CLOCK: [2016-12-23 Fri 11:13]--[2016-12-23 Fri 11:20] =>  0:07
-    CLOCK: [2016-12-19 Mon 20:19]--[2016-12-19 Mon 20:22] =>  0:03
-
-We need a constructor that takes in all properties.
-
-Actually we should take on this story after inheritance, because the
-implementation is affected by it.
-
-We also need a parameterless constructor for serialisation purposes.
-
-Links:
-
-- [[http://stackoverflow.com/questions/12561333/why-do-i-need-a-parameterless-constructor][Why do I need a parameterless constructor?]]
-- [[http://stackoverflow.com/questions/267724/why-xml-serializable-class-need-a-parameterless-constructor][Why XML-Serializable class need a parameterless constructor]]
-- [[http://stackoverflow.com/questions/12051/calling-the-base-constructor-in-c-sharp][Calling the base constructor in C#]]
-
 *** COMPLETED Consider changing inherited attributes to a list        :story:
     CLOSED: [2016-12-23 Fri 13:33]
     CLOCK: [2016-12-23 Fri 13:02]--[2016-12-23 Fri 13:20] =>  0:18
@@ -593,6 +574,28 @@ such parent. However, this is used in the =Stateful= concept which is
 also used by concepts themselves, and they do support multiple
 inheritance. Thus if we changed it to a list we'd break concepts. This
 requires quite a bit of thinking. A story for this is backlogged.
+
+*** COMPLETED Add complete constructor for C# types                   :story:
+    CLOSED: [2016-12-23 Fri 14:15]
+    CLOCK: [2016-12-23 Fri 13:46]--[2016-12-23 Fri 14:15] =>  0:29
+    CLOCK: [2016-12-23 Fri 13:21]--[2016-12-23 Fri 13:45] =>  0:24
+    CLOCK: [2016-12-23 Fri 11:24]--[2016-12-23 Fri 12:03] =>  0:39
+    CLOCK: [2016-12-23 Fri 11:21]--[2016-12-23 Fri 11:23] =>  0:02
+    CLOCK: [2016-12-23 Fri 11:13]--[2016-12-23 Fri 11:20] =>  0:07
+    CLOCK: [2016-12-19 Mon 20:19]--[2016-12-19 Mon 20:22] =>  0:03
+
+We need a constructor that takes in all properties.
+
+Actually we should take on this story after inheritance, because the
+implementation is affected by it.
+
+We also need a parameterless constructor for serialisation purposes.
+
+Links:
+
+- [[http://stackoverflow.com/questions/12561333/why-do-i-need-a-parameterless-constructor][Why do I need a parameterless constructor?]]
+- [[http://stackoverflow.com/questions/267724/why-xml-serializable-class-need-a-parameterless-constructor][Why XML-Serializable class need a parameterless constructor]]
+- [[http://stackoverflow.com/questions/12051/calling-the-base-constructor-in-c-sharp][Calling the base constructor in C#]]
 
 *** Add immutability support for C# types                             :story:
 
